# openfa

./: .build.yml  .clippy.toml  .dockerignore  .gitignore  .gitlab-ci.yml  .gitmodules  CHANGELOG.md  Cargo.toml  Dockerfile  Makefile  README.md  ROADMAP.md  TODO  autoexec.n2o  demo.n2o  main.workflow  shell.nix
.build/: build.yml  check-clippy.yml  check-format.yml  check-test.yml  release-windows.yml
.github/: main.workflow
apps/disasm/: Cargo.toml
apps/disasm/src/: main.rs
apps/dlg_explorer/: Cargo.toml
apps/dlg_explorer/src/: main.rs
apps/dump-asm/: Cargo.toml
apps/dump-asm/src/: main.rs
apps/dump-lay/: Cargo.toml
apps/dump-lay/src/: main.rs
apps/dump-lib/: Cargo.toml
apps/dump-lib/src/: main.rs
apps/dump-m/: Cargo.toml
apps/dump-m/src/: main.rs
apps/dump-mm/: Cargo.toml
apps/dump-mm/src/: main.rs
apps/dump-pal/: Cargo.toml
apps/dump-pal/src/: main.rs
apps/dump-pe/: Cargo.toml
apps/dump-pe/src/: main.rs
apps/dump-pic/: Cargo.toml  README.md
apps/dump-pic/src/: main.rs
apps/dump-sh/: Cargo.toml
apps/dump-sh/src/: export_csv.rs  export_dxf.rs  export_gltf.rs  main.rs
apps/dump-t2/: Cargo.toml
apps/dump-t2/src/: main.rs
apps/dump-terrain-tables/: Cargo.toml
apps/dump-terrain-tables/src/: main.rs
apps/dump-terrain-tiles/: Cargo.toml
apps/dump-terrain-tiles/src/: main.rs
apps/dump-terrain-tiles/src/mip/: index.rs  mod.rs  tile.rs
apps/dump-terrain-tiles/src/srtm/: index.rs  mod.rs  tile.rs
apps/dump-vulkan/: Cargo.toml
apps/dump-vulkan/src/: main.rs
apps/dump-xt/: Cargo.toml
apps/dump-xt/src/: main.rs
apps/map_explorer/: Cargo.toml
apps/map_explorer/src/: main.rs
apps/mm_explorer/: Cargo.toml
apps/mm_explorer/src/: main.rs  texture_atlas.rs
apps/pack-lib/: Cargo.toml
apps/pack-lib/src/: main.rs
apps/pack-pic/: Cargo.toml
apps/pack-pic/src/: main.rs
apps/pack-sh/: Cargo.toml
apps/pack-sh/src/: main.rs
apps/paldump/: Cargo.toml
apps/paldump/src/: main.rs
apps/pedump/: Cargo.toml
apps/pedump/src/: main.rs
apps/picdump/: Cargo.toml
apps/picdump/src/: main.rs
apps/picpack/: Cargo.toml
apps/picpack/src/: main.rs
apps/raw_sh_explorer/: Cargo.toml
apps/sh_explorer/: Cargo.toml
apps/sh_explorer/src/: main.rs
apps/shape_explorer/: Cargo.toml
apps/shape_explorer/src/: main.rs
apps/shdump/: Cargo.toml
apps/shdump/src/: main.rs
apps/show-dlg/: Cargo.toml
apps/show-dlg/src/: main.rs
apps/show-mm/: Cargo.toml
apps/show-mm/src/: main.rs
apps/show-sh/: Cargo.toml
apps/show-sh-legacy/: Cargo.toml
apps/show-sh-raw/: Cargo.toml
apps/show-sh-raw/src/: main.rs  raw_sh_renderer.rs
apps/show-sh-raw/src/text/: glyph_cache.rs  mod.rs
apps/show-sh-raw/src/window/: mod.rs
apps/show-sh/src/: main.rs
apps/show-sky/: Cargo.toml
apps/show-sky/src/: main.rs
apps/t2_explorer/: Cargo.toml
apps/t2_explorer/src/: main.rs
apps/unlib/: Cargo.toml
apps/vulkandump/: Cargo.toml
apps/vulkandump/src/: main.rs
libs/: nitrogen
libs/absolute_unit/: Cargo.toml
libs/animate/: Cargo.toml
libs/ansi/: Cargo.toml
libs/asset/: Cargo.toml
libs/catalog/: Cargo.toml
libs/command/: Cargo.toml
libs/command/src/: bindings.rs  command.rs  lib.rs
libs/dlg/: Cargo.toml
libs/dlg/src/: lib.rs
libs/entity/: Cargo.toml
libs/fnt/: Cargo.toml
libs/galaxy/: Cargo.toml
libs/geodesy/: Cargo.toml
libs/gfx/: Cargo.toml
libs/gpu/: Cargo.toml
libs/i386/: Cargo.toml
libs/input/: Cargo.toml
libs/jt/: Cargo.toml
libs/lay/: Cargo.toml
libs/legacy_render/: Cargo.toml
libs/lib/: Cargo.toml
libs/lzss/: Cargo.toml
libs/mm/: Cargo.toml
libs/mnu/: Cargo.toml
libs/nt/: Cargo.toml
libs/object/: Cargo.toml
libs/omni_resource/: Cargo.toml
libs/omnilib/: Cargo.toml
libs/orrery/: Cargo.toml
libs/ot/: Cargo.toml
libs/packed_struct/: Cargo.toml
libs/pal/: Cargo.toml
libs/peff/: Cargo.toml  README.md
libs/pic/: Cargo.toml  README.md
libs/pkware/: Cargo.toml
libs/pt/: Cargo.toml
libs/render/: Cargo.toml
libs/resource/: Cargo.toml
libs/resource_manager/: Cargo.toml
libs/reverse/: Cargo.toml
libs/sh/: Cargo.toml
libs/shape/: Cargo.toml
libs/star_catalog/: Cargo.toml
libs/stars/: Cargo.toml
libs/t2/: Cargo.toml
libs/texture/: Cargo.toml
libs/universe/: Cargo.toml
libs/universe_base/: Cargo.toml
libs/window/: Cargo.toml
libs/world/: Cargo.toml
libs/xt/: Cargo.toml
nitrogen/: Cargo.toml
nitrogen/apps/dump-terrain-tables/src/: main.rs
nitrogen/libs/sim/absolute_unit/src/: angle.rs  generic.rs  length.rs  lib.rs
nitrogen/libs/sim/absolute_unit/src/unit/: arcminutes.rs  arcseconds.rs  degrees.rs  feet.rs  kilometers.rs  meters.rs  mod.rs  radians.rs
nitrogen/libs/sim/camera/: Cargo.toml
nitrogen/libs/sim/camera/src/: arc_ball_camera.rs  camera_impl.rs  lib.rs  ufo_camera.rs
nitrogen/libs/sim/geodesy/: Cargo.toml
nitrogen/libs/sim/geodesy/src/: cartesian.rs  graticule.rs  lib.rs
nitrogen/libs/sim/geodesy/src/origin/: geo_center.rs  geo_surface.rs  mod.rs  target.rs
nitrogen/libs/sim/geometry/: Cargo.toml
nitrogen/libs/sim/geometry/src/: algorithm.rs  arrow.rs  circle.rs  ico_sphere.rs  lib.rs  plane.rs  sphere.rs
nitrogen/libs/sim/geometry/src/intersect/: circle_plane.rs  mod.rs  sphere_plane.rs
nitrogen/libs/sim/orrery/: Cargo.toml
nitrogen/libs/sim/orrery/src/: lib.rs
nitrogen/libs/sim/physical_constants/: Cargo.toml
nitrogen/libs/sim/physical_constants/src/: lib.rs
nitrogen/libs/system/ansi/src/: lib.rs
nitrogen/libs/system/command/src/: bindings.rs  command.rs  keyset.rs  lib.rs
nitrogen/libs/system/frame_graph/: Cargo.toml
nitrogen/libs/system/frame_graph/src/: frame_state_tracker.rs  lib.rs
nitrogen/libs/system/gpu/: Cargo.toml
nitrogen/libs/system/gpu/src/: lib.rs
nitrogen/libs/system/input/: Cargo.toml
nitrogen/libs/system/input/src/: lib.rs
scripts/: download_bmng_tiles.py  download_srtm_tiles.py  populate_test_data.sh  validate_and_extract_srtm_tiles.py
site/: config.toml
site/content/: release_announcement_0_1_1.md
site/templates/: index.html
src/: game.rs  main.rs
(+654 files in other folders)
