[package]
name = "openfa"
description = "An open source, black box re-implementation of the Jane's Fighters Anthology engine."
version = "0.0.3"
authors = ["Terrence Cole <terrence.d.cole@gmail.com>"]
edition = "2021"
readme = "https://gitlab.com/terrence_too/openfa/-/blob/main/README.md"
homepage = "https://gitlab.com/terrence_too/openfa"
documentation = "https://gitlab.com/terrence_too/openfa"
repository = "https://gitlab.com/terrence_too/openfa"
license = "GPL-3.0-only"
exclude = []
include = []
keywords = ["aerospace", "emulation", "classic-gaming", "simulation"]
categories = ["aerospace", "emulation", "simulation"]

[workspace.package]
description = "An open source, black box re-implementation of the Jane's Fighters Anthology engine."
version = "0.0.3"
authors = ["Terrence Cole <terrence.d.cole@gmail.com>"]
edition = "2021"
readme = "https://gitlab.com/terrence_too/openfa/-/blob/main/README.md"
homepage = "https://gitlab.com/terrence_too/openfa"
documentation = "https://gitlab.com/terrence_too/openfa"
repository = "https://gitlab.com/terrence_too/openfa"
license = "GPL-3.0-only"

[workspace]
members = [
    "apps/dump-lay",
    "apps/dump-lib",
    "apps/dump-m",
    "apps/dump-mm",
    "apps/dump-pal",
    "apps/dump-pe",
    "apps/dump-pic",
    "apps/dump-sh",
    "apps/dump-t2",
    "apps/dump-xt",
    "apps/pack-lib",
    # "apps/pack-pic",
    "apps/show-sh",

    # "libs/asset/dlg",
    "libs/asset/fnt",
    "libs/asset/jt",
    "libs/asset/lay",
    "libs/asset/lib",
    "libs/asset/mc",
    "libs/asset/mmm",
    "libs/asset/mnu",
    "libs/asset/nt",
    "libs/asset/ot",
    "libs/asset/pal",
    "libs/asset/pic",
    "libs/asset/pt",
    "libs/asset/sh",
    "libs/asset/t2",
    "libs/asset/xt",

    "libs/game/asset_loader",
    "libs/game/flight_dynamics",
    "libs/game/player",
    "libs/game/fa_vehicle",

    "libs/wgpu-buffer/font_fnt",
    "libs/wgpu-buffer/instrument_envelope",
    "libs/wgpu-buffer/ofa_groups",
    "libs/wgpu-buffer/pic_uploader",
    "libs/wgpu-buffer/shape",
    "libs/wgpu-buffer/t2_terrain",

    "libs/util/i386",
    "libs/util/lzss",
    "libs/util/peff",
    "libs/util/pkware",
    "libs/util/reverse",
]

[workspace.dependencies]
anyhow = { version = "^ 1", features = ["backtrace"] }
bevy_ecs = { version = "^ 0.8", features = ["trace"] }
chrono = "^ 0.4"
csscolorparser = "^ 0.6"
env_logger = "^ 0.9"
image = "^ 0.24"
log = "^ 0.4"
nalgebra = "^ 0.31"
once_cell = "^ 1"
ordered-float = "^ 3"

# Emit debugging symbols for tracing
[profile.release]
debug = true

# Turn on a small amount of optimisation while developing, mostly targetted
# at triangulate, image, nalgebra and other packages that are artificially
# slow in debug builds. Note that we have to turn it on from _all_, not just
# dependencies because of inlining.
[profile.dev]
debug = true
debug-assertions = true
opt-level = 1

[dependencies]
anyhow.workspace = true
bevy_ecs.workspace = true
chrono.workspace = true
csscolorparser.workspace = true
env_logger.workspace = true
image.workspace = true
log.workspace = true
nalgebra.workspace = true
once_cell.workspace = true
ordered-float.workspace = true
parking_lot = "^ 0.12"
paste = "^ 1"
platform-dirs = "^ 0.3"
structopt = "^ 0.3"
terminal_size = "^ 0.1"
winit = "^ 0.26"
absolute_unit = { path = "libs/nitrogen/util/absolute_unit" }
animate = { path = "libs/nitrogen/sim/animate" }
asset_loader = { path = "libs/game/asset_loader" }
atmosphere = { path = "libs/nitrogen/wgpu-buffer/atmosphere" }
camera = { path = "libs/nitrogen/sim/camera" }
catalog = { path = "libs/nitrogen/system/catalog" }
composite = { path = "libs/nitrogen/wgpu-buffer/composite" }
event_mapper = { path = "libs/nitrogen/sim/event_mapper" }
fa_vehicle = { path = "libs/game/fa_vehicle" }
flight_dynamics = { path = "libs/game/flight_dynamics" }
fnt = { path = "libs/asset/fnt" }
font_fnt = { path = "libs/wgpu-buffer/font_fnt" }
fullscreen = { path = "libs/nitrogen/wgpu-buffer/fullscreen" }
geodesy = { path = "libs/nitrogen/util/geodesy" }
geometry = { path = "libs/nitrogen/util/geometry" }
global_data = { path = "libs/nitrogen/wgpu-buffer/global_data" }
gpu = { path = "libs/nitrogen/system/gpu" }
input = { path = "libs/nitrogen/system/input" }
instrument_envelope = { path = "libs/wgpu-buffer/instrument_envelope" }
lib = { path = "libs/asset/lib" }
marker = { path = "libs/nitrogen/wgpu-buffer/marker" }
measure = { path = "libs/nitrogen/sim/measure" }
mmm = { path = "libs/asset/mmm" }
nitrous = { path = "libs/nitrogen/util/nitrous" }
orrery = { path = "libs/nitrogen/sim/orrery" }
pal = { path = "libs/asset/pal" }
physical_constants = { path = "libs/nitrogen/util/physical_constants" }
player = { path = "libs/game/player" }
runtime = { path = "libs/nitrogen/util/runtime" }
shape = { path = "libs/wgpu-buffer/shape" }
stars = { path = "libs/nitrogen/wgpu-buffer/stars" }
t2_terrain = { path = "libs/wgpu-buffer/t2_terrain" }
terrain = { path = "libs/nitrogen/wgpu-buffer/terrain" }
tracelog = { path = "libs/nitrogen/system/tracelog" }
ui = { path = "libs/nitrogen/wgpu-buffer/ui" }
vehicle = { path = "libs/nitrogen/sim/vehicle" }
widget = { path = "libs/nitrogen/wgpu-buffer/widget" }
window = { path = "libs/nitrogen/system/window" }
world = { path = "libs/nitrogen/wgpu-buffer/world" }
xt = { path = "libs/asset/xt" }
