[workspace.package]
description = "An open source, black box re-implementation of the Jane's Fighters Anthology engine."
version = "0.1.0"
authors = ["Terrence Cole <terrence.d.cole@gmail.com>"]
edition = "2021"
rust-version = "1.64"
readme = "https://gitlab.com/terrence_too/openfa/-/blob/main/README.md"
homepage = "https://gitlab.com/terrence_too/openfa"
documentation = "https://gitlab.com/terrence_too/openfa"
repository = "https://gitlab.com/terrence_too/openfa"
license = "GPL-3.0-only"

[workspace]
members = [
    "apps/dump-lay",
    "apps/dump-lib",
    "apps/dump-m",
    "apps/dump-mm",
    "apps/dump-pal",
    "apps/dump-pe",
    "apps/dump-pic",
    "apps/dump-sh",
    "apps/dump-t2",
    "apps/dump-xt",
    "apps/pack-lib",
    # "apps/pack-pic",
    "apps/pack-sh",
    "apps/show-sh",

    # "libs/asset/dlg",
    "libs/asset/fnt",
    "libs/asset/jt",
    "libs/asset/lay",
    "libs/asset/lib",
    "libs/asset/mc",
    "libs/asset/mmm",
    "libs/asset/mnu",
    "libs/asset/nt",
    "libs/asset/ot",
    "libs/asset/pal",
    "libs/asset/pic",
    "libs/asset/pt",
    "libs/asset/sh",
    "libs/asset/t2",
    "libs/asset/xt",

    "libs/game/asset_loader",
    "libs/game/flight_dynamics",
    "libs/game/player",
    "libs/game/fa_vehicle",

    "libs/wgpu-buffer/font_fnt",
    "libs/wgpu-buffer/instrument_envelope",
    "libs/wgpu-buffer/ofa_groups",
    "libs/wgpu-buffer/pic_uploader",
    "libs/wgpu-buffer/shape",
    "libs/wgpu-buffer/t2_terrain",

    "libs/util/i386",
    "libs/util/lzss",
    "libs/util/peff",
    "libs/util/pkware",
    "libs/util/reverse",
]

[workspace.dependencies]
# nitrogen transitive deps
anyhow = { version = "^ 1", features = ["backtrace"] }
approx = "^ 0.5"
bevy_ecs = { version = "^ 0.8", features = ["trace"] }
bevy_tasks = "^ 0.8"
bitflags = "^ 1"
bzip2 = "^ 0.4"
chrono = "^ 0.4"
console_error_panic_hook = "^ 0.1"
crossbeam = "^ 0.8"
csscolorparser = "^ 0.6"
ellipse = "^ 0.2"
env_logger = "^ 0.9"
float-ord = "^ 0.3"
futures = { version = "^ 0.3", default-features = false, features = ["executor"] }
fxhash = "^ 0.2"
gilrs = "^ 0.9"
glob = "^ 0.3"
hashbag = "^ 0.1"
image = "^ 0.24"
itertools = "^ 0.10"
json = "^ 0.12"
lalrpop = "0.19.4"
lalrpop-util = { version = "^ 0.19", features = ["lexer"] }
lazy_static = "^ 1"
libc = "0.2"
log = "^ 0.4"
lyon_geom = "^ 0.17"
memmap = "^ 0.7"
memoffset = "^ 0.6"
naga = { version = "^ 0.10", features = ["spv-in", "spv-out", "dot-out", "glsl-in", "glsl-out", ] }
nalgebra = "^ 0.31"
num = "^ 0.4"
num-traits = "^ 0.2"
once_cell = "^ 1"
ordered-float = "^ 3"
parking_lot = "^ 0.12"
paste = "^ 1"
platform-dirs = "^ 0.3"
pretty-type-name = "1.0"
proc-macro2 = "^ 1"
quote = "^ 1"
rand = "^ 0.8"
raw-window-handle = "^ 0.5"
rayon = "^ 1.5"
regex = "^ 1"
rusttype = "^ 0.9"
shaderc = "^ 0.8"
simba = { version = "^ 0.7", default-features = false }
smallvec = "^ 1"
spirv-reflect = "^ 0.2"
static_assertions = "^ 1"
strsim = "^ 0.10"
structopt = "^ 0.3"
syn = { version = "= 1.0.92", features = ["default", "extra-traits", "full", "visit"] }
terminal_size = "^ 0.1"
tracing = { version = "0.1", features = ["release_max_level_info"] }
tracing-subscriber = { version = "0.3.1", features = ["registry", "env-filter"] }
tracing-chrome = "0.4.0"
tracing-log = "0.1.2"
tracing-error = "0.2.0"
triggered = "^ 0.1"
unicase = "^ 2.6"
wasm-bindgen = "=0.2.83"
wasm-bindgen-futures = "=0.4.33"
web-sys = { version = "=0.3.60", features = ["console"] }
wgpu = { version = "^ 0.14", features = ["spirv"] }
winit = "^ 0.27"
zerocopy = "^ 0.6"
# nitrogen libs
absolute_unit = { path = "libs/nitrogen/util/absolute_unit" }
ansi = { path = "libs/nitrogen/util/ansi" }
build_shaders = { path = "libs/nitrogen/util/build_shaders" }
geodesy = { path = "libs/nitrogen/util/geodesy" }
geometry = { path = "libs/nitrogen/util/geometry" }
nitrous = { path = "libs/nitrogen/util/nitrous" }
nitrous_injector = { path = "libs/nitrogen/util/nitrous_injector" }
packed_struct = { path = "libs/nitrogen/util/packed_struct" }
packed_injector = { path = "libs/nitrogen/util/packed_injector" }
physical_constants = { path = "libs/nitrogen/util/physical_constants" }
runtime = { path = "libs/nitrogen/util/runtime" }
star_catalog = { path = "libs/nitrogen/util/star_catalog" }
catalog = { path = "libs/nitrogen/system/catalog" }
gpu = { path = "libs/nitrogen/system/gpu" }
input = { path = "libs/nitrogen/system/input" }
jilrs = { path = "libs/nitrogen/system/jilrs" }
tracelog = { path = "libs/nitrogen/system/tracelog" }
window = { path = "libs/nitrogen/system/window" }
animate = { path = "libs/nitrogen/sim/animate" }
camera = { path = "libs/nitrogen/sim/camera" }
event_mapper = { path = "libs/nitrogen/sim/event_mapper" }
measure = { path = "libs/nitrogen/sim/measure" }
orrery = { path = "libs/nitrogen/sim/orrery" }
vehicle = { path = "libs/nitrogen/sim/vehicle" }
atlas = { path = "libs/nitrogen/wgpu-buffer/atlas" }
atmosphere = { path = "libs/nitrogen/wgpu-buffer/atmosphere" }
composite = { path = "libs/nitrogen/wgpu-buffer/composite" }
font_common = { path = "libs/nitrogen/wgpu-buffer/font_common" }
font_ttf = { path = "libs/nitrogen/wgpu-buffer/font_ttf" }
fullscreen = { path = "libs/nitrogen/wgpu-buffer/fullscreen" }
global_data = { path = "libs/nitrogen/wgpu-buffer/global_data" }
marker = { path = "libs/nitrogen/wgpu-buffer/marker" }
shader_shared = { path = "libs/nitrogen/wgpu-buffer/shader_shared" }
stars = { path = "libs/nitrogen/wgpu-buffer/stars" }
terrain = { path = "libs/nitrogen/wgpu-buffer/terrain" }
ui = { path = "libs/nitrogen/wgpu-buffer/ui" }
widget = { path = "libs/nitrogen/wgpu-buffer/widget" }
world = { path = "libs/nitrogen/wgpu-buffer/world" }
# openfa deps
byteorder = "^ 1"
codepage-437 = "^ 0.1"
dxf = "^ 0.5"
humansize = "^ 2"
md5 = "^ 0.3"
thiserror = "^ 1"
triangulate = "^ 0.1"
# openfa libs
fnt = { path = "libs/asset/fnt" }
jt = { path = "libs/asset/jt" }
lay = { path = "libs/asset/lay" }
lib = { path = "libs/asset/lib" }
mc = { path = "libs/asset/mc" }
mmm = { path = "libs/asset/mmm" }
mnu = { path = "libs/asset/mnu" }
nt = { path = "libs/asset/nt" }
ot = { path = "libs/asset/ot" }
pal = { path = "libs/asset/pal" }
pic = { path = "libs/asset/pic" }
pt = { path = "libs/asset/pt" }
sh = { path = "libs/asset/sh" }
t2 = { path = "libs/asset/t2" }
xt = { path = "libs/asset/xt" }
asset_loader = { path = "libs/game/asset_loader" }
flight_dynamics = { path = "libs/game/flight_dynamics" }
player = { path = "libs/game/player" }
fa_vehicle = { path = "libs/game/fa_vehicle" }
font_fnt = { path = "libs/wgpu-buffer/font_fnt" }
instrument_envelope = { path = "libs/wgpu-buffer/instrument_envelope" }
ofa_groups = { path = "libs/wgpu-buffer/ofa_groups" }
pic_uploader = { path = "libs/wgpu-buffer/pic_uploader" }
shape = { path = "libs/wgpu-buffer/shape" }
t2_terrain = { path = "libs/wgpu-buffer/t2_terrain" }
i386 = { path = "libs/util/i386" }
lzss = { path = "libs/util/lzss" }
peff = { path = "libs/util/peff" }
pkware = { path = "libs/util/pkware" }
reverse = { path = "libs/util/reverse" }

# Emit debugging symbols for tracing
[profile.release]
debug = true

# Turn on a small amount of optimisation while developing, mostly targetted
# at triangulate, image, nalgebra and other packages that are artificially
# slow in debug builds. Note that we have to turn it on from _all_, not just
# dependencies because of inlining.
[profile.dev]
debug = true
debug-assertions = true
opt-level = 1

[package]
name = "openfa"
description = "An open source, black box re-implementation of the Jane's Fighters Anthology engine."
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
readme.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true
exclude = []
include = []
keywords = ["aerospace", "emulation", "classic-gaming", "simulation"]
categories = ["aerospace", "emulation", "simulation"]

[dependencies]
anyhow.workspace = true
bevy_ecs.workspace = true
chrono.workspace = true
csscolorparser.workspace = true
env_logger.workspace = true
image.workspace = true
log.workspace = true
nalgebra.workspace = true
once_cell.workspace = true
ordered-float.workspace = true
platform-dirs.workspace = true
structopt.workspace = true
terminal_size.workspace = true
# libs
absolute_unit.workspace = true
animate.workspace = true
asset_loader.workspace = true
atmosphere.workspace = true
camera.workspace = true
catalog.workspace = true
composite.workspace = true
event_mapper.workspace = true
fa_vehicle.workspace = true
flight_dynamics.workspace = true
fnt.workspace = true
font_fnt.workspace = true
fullscreen.workspace = true
geodesy.workspace = true
geometry.workspace = true
global_data.workspace = true
gpu.workspace = true
input.workspace = true
instrument_envelope.workspace = true
lib.workspace = true
marker.workspace = true
measure.workspace = true
mmm.workspace = true
nitrous.workspace = true
orrery.workspace = true
pal.workspace = true
physical_constants.workspace = true
player.workspace = true
runtime.workspace = true
shape.workspace = true
stars.workspace = true
t2_terrain.workspace = true
terrain.workspace = true
tracelog.workspace = true
ui.workspace = true
vehicle.workspace = true
widget.workspace = true
window.workspace = true
world.workspace = true
xt.workspace = true
