[package]
name = "nitrogen"
version = "0.1.0"
authors = ["Terrence Cole <terrence.d.cole@gmail.com>"]
edition = "2018"

[workspace]
members = [
    "apps/dump-terrain-tables",

    "libs/sim/absolute_unit",
    "libs/sim/camera",
    "libs/sim/geodesy",
    "libs/sim/geometry",
    "libs/sim/orrery",
    "libs/sim/physical_constants",

    "libs/system/ansi",
    "libs/system/command",
    "libs/system/frame_graph",
    "libs/system/gpu",
    "libs/system/input",
]

[dependencies]
