[package]
name = "dlg_explorer"
version = "0.1.0"
authors = ["Terrence Cole <terrence.d.cole@gmail.com>"]
edition = "2018"

[dependencies]
failure = ">= 0.1.2"
log = ">= 0.4"
simplelog = "^0.5.0"
structopt = ">= 0.2"
vulkano = "^ 0.11.1"
vulkano-shaders = "^ 0.11.1"
vulkano-win = "^ 0.11.1"
winit = "^ 0.18"
dlg = { path = "../../libs/dlg" }
omnilib = { path = "../../libs/omnilib" }
render = { path = "../../libs/render" }
window = { path = "../../libs/window" }