[package]
name = "dump-lay"
version = "0.0.0"
authors = ["Terrence Cole <terrence.d.cole@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = { version = "^ 1", features = ["backtrace"] }
structopt = "^ 0.3"
lib = { path = "../../libs/asset/lib" }
lay = { path = "../../libs/asset/lay" }
pal = { path = "../../libs/asset/pal" }
