[package]
name = "dump-lay"
description.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true
readme.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
structopt = "^ 0.3"
catalog = { path = "../../libs/nitrogen/system/catalog" }
lib = { path = "../../libs/asset/lib" }
lay = { path = "../../libs/asset/lay" }
pal = { path = "../../libs/asset/pal" }
