[package]
name = "dump-lib"
version = "0.0.0"
authors = ["Terrence Cole <terrence.d.cole@gmail.com>"]
edition = "2021"

[dependencies]
anyhow = { version = "^ 1", features = ["backtrace"] }
humansize = "^ 2"
structopt = "^ 0.3"
catalog = { path = "../../libs/nitrogen/system/catalog" }
lib = { path = "../../libs/asset/lib" }