[package]
name = "dump-m"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "^ 1", features = ["backtrace"] }
env_logger = "^ 0.9"
structopt = "^ 0.3"
catalog = { path = "../../libs/nitrogen/system/catalog" }
lib = { path = "../../libs/asset/lib" }
mmm = { path = "../../libs/asset/mmm" }
xt = { path = "../../libs/asset/xt" }
