[package]
name = "dump-mm"
version = "0.0.0"
authors = ["Terrence Cole <terrence.d.cole@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "^ 1"
env_logger = "^ 0.8"
structopt = "^ 0.2"
lib = { path = "../../libs/asset/lib" }
mm = { path = "../../libs/asset/mm" }
xt = { path = "../../libs/asset/xt" }
