[package]
name = "dump-mm"
version = "0.0.0"
authors = ["Terrence Cole <terrence.d.cole@gmail.com>"]
edition = "2021"

[dependencies]
anyhow = { version = "^ 1", features = ["backtrace"] }
env_logger = "^ 0.8"
structopt = "^ 0.3"
catalog = { path = "../../libs/nitrogen/system/catalog" }
lib = { path = "../../libs/asset/lib" }
mmm = { path = "../../libs/asset/mmm" }
xt = { path = "../../libs/asset/xt" }
