[package]
name = "dump-mm"
description.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true
readme.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
anyhow = { version = "^ 1", features = ["backtrace"] }
env_logger = "^ 0.9"
structopt = "^ 0.3"
catalog = { path = "../../libs/nitrogen/system/catalog" }
lib = { path = "../../libs/asset/lib" }
mmm = { path = "../../libs/asset/mmm" }
xt = { path = "../../libs/asset/xt" }
