[package]
name = "dump-pal"
description.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true
readme.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
anyhow = { version = "^ 1", features = ["backtrace"] }
image = "^ 0.24"
structopt = "^ 0.3"
catalog = { path = "../../libs/nitrogen/system/catalog" }
lib = { path = "../../libs/asset/lib" }
pal = { path = "../../libs/asset/pal" }
