[package]
name = "dump-pe"
version = "0.0.0"
authors = ["Terrence Cole <terrence.d.cole@gmail.com>"]
edition = "2021"

[dependencies]
anyhow = { version = "^ 1", features = ["backtrace"] }
structopt = "^ 0.3"
ansi = { path = "../../libs/nitrogen/util/ansi" }
catalog = { path = "../../libs/nitrogen/system/catalog" }
lib = { path = "../../libs/asset/lib" }
peff = { path = "../../libs/util/peff" }