[package]
name = "dump-pe"
version = "0.0.0"
authors = ["Terrence Cole <terrence.d.cole@gmail.com>"]
edition = "2021"

[dependencies]
anyhow = { version = "^ 1", features = ["backtrace"] }
env_logger = "^ 0.9"
structopt = "^ 0.3"
ansi = { path = "../../libs/nitrogen/util/ansi" }
catalog = { path = "../../libs/nitrogen/system/catalog" }
i386 = { path = "../../libs/util/i386" }
lib = { path = "../../libs/asset/lib" }
peff = { path = "../../libs/util/peff" }