[package]
name = "dump-pe"
description.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true
readme.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
env_logger.workspace = true
structopt = "^ 0.3"
ansi = { path = "../../libs/nitrogen/util/ansi" }
catalog = { path = "../../libs/nitrogen/system/catalog" }
i386 = { path = "../../libs/util/i386" }
lib = { path = "../../libs/asset/lib" }
peff = { path = "../../libs/util/peff" }