[package]
name = "dump-pic"
version = "0.1.0"
authors = ["Terrence Cole <terrence.d.cole@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "^ 1"
image = "^ 0.23"
structopt = "^ 0.2"
ansi = { path = "../../libs/nitrogen/system/ansi" }
lib = { path = "../../libs/asset/lib" }
pal = { path = "../../libs/asset/pal" }
pic = { path = "../../libs/asset/pic" }