[package]
name = "dump-pic"
description.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true
readme.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
image.workspace = true
structopt.workspace = true
catalog = { path = "../../libs/nitrogen/system/catalog" }
lib = { path = "../../libs/asset/lib" }
pal = { path = "../../libs/asset/pal" }
pic = { path = "../../libs/asset/pic" }