[package]
name = "dump-sh"
description.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true
readme.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
env_logger.workspace = true
gltf.workspace = true
serde.workspace = true
structopt.workspace = true
zerocopy.workspace = true
# libs
catalog.workspace = true
i386.workspace = true
lib.workspace = true
reverse.workspace = true
sh.workspace = true