[package]
name = "dump-terrain-tiles"
version = "0.1.0"
authors = ["Terrence Cole <terrence.d.cole@gmail.com>"]
edition = "2018"

[dependencies]
failure = "^ 0.1.2"
json = "^ 0.12"
image = "^ 0.23"
memmap = "^ 0.7"
nalgebra = "^ 0.20"
structopt = "^ 0.3"
zerocopy = "^ 0.2"
absolute_unit = { path = "../../libs/nitrogen/sim/absolute_unit" }
geodesy = { path = "../../libs/nitrogen/sim/geodesy" }
terrain_geo = { path = "../../libs/render-wgpu/buffer/terrain_geo" }