[package]
name = "dump-xt"
description.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true
readme.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
anyhow = { version = "^ 1", features = ["backtrace"] }
env_logger = "^ 0.9"
structopt = "^ 0.3"
absolute_unit = { path = "../../libs/nitrogen/util/absolute_unit" }
catalog = { path = "../../libs/nitrogen/system/catalog" }
lib = { path = "../../libs/asset/lib" }
xt = { path = "../../libs/asset/xt" }
pt = { path = "../../libs/asset/pt" }
