[package]
name = "dump-xt"
description.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true
readme.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
env_logger.workspace = true
structopt.workspace = true
absolute_unit = { path = "../../libs/nitrogen/util/absolute_unit" }
catalog = { path = "../../libs/nitrogen/system/catalog" }
lib = { path = "../../libs/asset/lib" }
xt = { path = "../../libs/asset/xt" }
pt = { path = "../../libs/asset/pt" }
