[package]
name = "dump-xt"
description.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true
readme.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
env_logger.workspace = true
structopt.workspace = true
# libs
absolute_unit.workspace = true
catalog.workspace = true
lib.workspace = true
xt.workspace = true
pt.workspace = true
