[package]
name = "pack-lib"
description.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true
readme.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
env_logger = "^ 0.9"
structopt = "^ 0.3"
lib = { path = "../../libs/asset/lib" }
