[package]
name = "pack-pic"
description.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true
readme.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
image.workspace = true
rand.workspace = true
structopt.workspace = true
zerocopy.workspace = true
# libs
catalog.workspace = true
lib.workspace = true
pal.workspace = true
pic.workspace = true