[package]
name = "pack-sh"
description.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true
readme.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
gltf.workspace = true
env_logger.workspace = true
structopt.workspace = true
# openfa deps
packed_struct.workspace = true
peff.workspace = true
zerocopy.workspace = true
